Krvin: fixed cards on mobile

--- a/Krvin/css/krvin.css
+++ b/Krvin/css/krvin.css
@@ -812,6 +812,9 @@ footer a:hover {
     #project-biomark .app {
         width: 60%;
     }
+    #project-talkm .illustration {
+        width: 90%;
+    }
     #project-gluthea .jinri {
         width: 56%;
         right: 15px;
